[tool.poetry]
name = "scripts-py-libs"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]
readme = "README.md"
packages = [{include = "spl"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.12.0"
flake8-black = "^0.3.6"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
