[tool.poetry]
name = "scripts-py-libs"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]
readme = "README.md"
packages = [{include = "spl", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.12.0"
flake8-black = "^0.3.6"
ipdb = "^0.13.13"
flake8-pyproject = "^1.2.3"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88

# See https://github.com/PyCQA/pycodestyle/issues/373
extend-ignore = ["E203"]
